La codificacion funciona, falla la deco